# GILES

./: .clang-format  .gitignore  .gitmodules  Adding_Models_and_Simulators.md  BUILDING.md  CMakeLists.txt  OPTIONS.md  README.md  coeffs.json
cmake/: External.cmake  Models.cmake  Third_Party.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
src/: Abstract_Factory.hpp  Abstract_Factory_Register.hpp  Assembly_Instruction.hpp  CMakeLists.txt  Coefficients.cpp  Coefficients.hpp  ELMO2.cpp  Emulator_Andres.cpp  Emulator_Andres.hpp  Emulator_Factory.hpp  Emulator_Factory_Register.hpp  Emulator_Interface.hpp  Emulator_TEMPLATE.cpp  Emulator_TEMPLATE.hpp  Error.hpp  Execution.hpp  Factory_Register.hpp  GILES.cpp  GILES.cpp~  IO.cpp  IO.hpp  Main.cpp  Main.cpp~  Makefile  Model.hpp  Model_Factory.cpp  Model_Factory.cpp.in  Model_Factory.hpp  Model_Factory_Register.hpp  Model_Hamming_Weight.cpp  Model_Hamming_Weight.hpp  Model_Power.cpp  Model_Power.hpp  Model_TEMPLATE.cpp  Model_TEMPLATE.hpp  Register.hpp  Traces.hpp  Unicorn_Interface.hpp  Utility.hpp  Validator_Coefficients.cpp  (+6 more)
src/Factory/: Abstract_Factory.hpp  Abstract_Factory_Register.hpp  Emulator_Factory.hpp  Emulator_Factory_Register.hpp  Model_Factory.hpp  Model_Factory_Register.hpp
src/Models/: Model.hpp  Model_Math.hpp
src/Models/Hamming_Weight/: Model_Hamming_Weight.cpp  Model_Hamming_Weight.hpp
src/Models/Power/: Model_Power.cpp  Model_Power.hpp
src/Models/TEMPLATE/: Model_TEMPLATE.cpp  Model_TEMPLATE.hpp
src/Simulators/: Emulator.hpp  Emulator_Interface.hpp
src/Simulators/TEMPLATE/: Emulator_TEMPLATE.cpp  Emulator_TEMPLATE.hpp
src/Simulators/Thumb_Sim/: Emulator_Thumb_Sim.cpp  Emulator_Thumb_Sim.hpp
src/Simulators/Unicorn/: Emulator_Unicorn.cpp  Emulator_Unicorn.hpp
src/Simulators/thumb-sim/: Emulator_Andres.cpp  Emulator_Andres.hpp
test/: CMakeLists.txt  Test_Coefficients.cpp  Test_Execution.cpp  Test_Factory.cpp  Test_Validator_Coefficients.cpp  Tests.cpp
uml/: Class.plantuml  Sequence.plantuml  UseCase.plantuml
